Tue Dec 27 11:39:58 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for next release

Tue Dec 27 10:06:28 CET 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO version 1.0.7 released.

Tue Dec 20 15:10:01 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Receiver/Latency_Receiver.cpp:
        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/Latency_Sender.cpp:
        * connectors/dds4ccm/performance-tests/DDSThroughput/DDS_Receiver/Throughput_Receiver.cpp:
        * connectors/dds4ccm/performance-tests/DDSThroughput/DDS_Sender/Throughput_Sender.cpp:
          Reset the timer queue and finalize DDS explicitly to fix a lot of
          reported memory leaks

Tue Dec 20 09:10:05 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

       * connectors/ami4ccm/tests/InterReturn/Sender/InterReturnT_Sender_exec.cpp:
       Solved valgrind errors.

Mon Dec 19 11:33:05 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

       * tests/DAnCE/NodeManager-Deployments/run_test.pl:
       * tests/DAnCE/NodeManager-Deployments/run_test_noevent.pl:
       * tests/DAnCE/NodeManager-Deployments/run_test_cdr.pl:
       * tests/DAnCE/NodeManager-Deployments/run_testcdr_noevent.pl:
       * tests/DAnCE/ExecutionManager-Deployments/run_test.pl:
       * tests/DAnCE/ExecutionManager-Deployments/run_test_noevent.pl:
       * tests/DAnCE/ExecutionManager-Deployments/run_test_cdr.pl:
       * tests/DAnCE/ExecutionManager-Deployments/run_testcdr_noevent.pl:
       * tests/DAnCE/EM-Redeployment/run_test.pl:
       * tests/DAnCE/Em_Redeployment/run_test_noevent.pl:
       * bin/ciao_tests.lst:
       Splitted tests-runs in runs for noevent disabled and enabled.


Sun Dec 18 11:36:05 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          Run more tests with noevent, if some of the cdp's are not fit